# vx

./: pyproject.toml
src/azma/: __init__.py
src/embed_lab/: __init__.py  cli.py  templates.py
src/template/IR_finetune/experiments/: exp_01_baseline.py
src/template/data/: dev.jsonl  gold.jsonl  train.jsonl
src/template/experiments/: exp_01_baseline.py
src/template/inventory/: datasets.py  evaluate.py  plotting.py  preprocess.py  train.py
src/vx/: cli.py
