[project]
name = "azma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohamad-tohidi", email = "the.mohammad.tohidi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
