[project]
name = "python-vx"
version = "0.4.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohamad-tohidi", email = "the.mohammad.tohidi@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "textual>=7.5.0",
    "typer>=0.21.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vx"


[project.scripts]
emb = "vx.cli:app"
